# aei-framework

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GLOSSARY.md  Makefile  NOTICE  README.md  REPORT.md  ROADMAP.md
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs  retention.rs  store.rs
crates/modules/: Cargo.toml
crates/runtime/: Cargo.toml
crates/utils/: Cargo.toml
docs/en/: ARCHITECTURE.md  CHANGELOG.md  CURIOSITY_SCORE.md  NEURON_MANAGEMENT.md  README.md  memory-interfaces.md  scheduler.md
docs/fr/: ARCHITECTURE.md  CHANGELOG.md  CURIOSITY_SCORE.md  GLOSSARY.md  NEURON_MANAGEMENT.md  README.md  ROADMAP.md  interfaces-memoire.md  scheduler.md
examples/: and.rs  basic.rs  linear_regression.rs  memory.rs  or.rs  xor.rs
src/: activation.rs  commands.rs  events.rs  lib.rs  network.rs  neuron.rs  queries.rs  synapse.rs
src/api/: mod.rs  network.rs
src/application/: add_random_neuron.rs  add_random_synapse.rs  command_handler.rs  commands.rs  common.rs  mod.rs  mutate_random_neuron_activation.rs  mutate_random_synapse_weight.rs  queries.rs  query_handler.rs  recalculate_curiosity_score.rs  remove_random_neuron.rs  remove_random_synapse.rs  set_synapse_weight.rs
src/core/: activation.rs  mod.rs  neuron.rs
src/domain/: activation.rs  events.rs  mod.rs  network.rs  neuron.rs  synapse.rs
src/infrastructure/: event_store.rs  mod.rs  (+2 more)
tests/: activation_coverage.rs  activation_derivatives.rs  add_random_neuron.rs  add_random_synapse.rs  basic_integration.rs  cqrs_flow.rs  curiosity_projection.rs  curiosity_score.rs  domain_invariants.rs  event_bus_it.rs  event_sourcing.rs  file_event_store.rs  get_curiosity_score.rs  io_api.rs  jsonl_event_store.rs  logic_gates.rs  memory_adaptive.rs  memory_store_it.rs  mutate_neuron_activation.rs  mutate_synapse_weight.rs  network_synapse.rs  network_tests.rs  neuron_commands.rs  neuron_lifecycle.rs  projection.rs  query_handler.rs  remove_random_neuron.rs  retention_compactor_it.rs  scheduler_it.rs  serde_json.rs  set_synapse_weight.rs  synapse_commands.rs  xor_training.rs
(+25 files in other folders)
