[package]
name = "aei-framework"
version = "0.1.0"
edition = "2021"
description = "Core of the AEI Framework for dynamic neural networks."
license = "MPL-2.0"
publish = false

[workspace]
members = [
    "crates/core",
    "crates/memory",
    "crates/runtime",
    "crates/utils",
]
resolver = "2"

[dependencies]
uuid = { version = "1.8", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
rand = "0.8"

[dev-dependencies]
rand_chacha = "0.3"
