[package]
name = "aei-framework"
version = "0.1.0"
edition = "2021"
description = "Core of the AEI Framework for dynamic neural networks."
license = "MPL-2.0"
publish = false

[workspace]
members = [
    "crates/core",
    "crates/memory",
    "crates/runtime",
    "crates/utils",
]
resolver = "2"

[dependencies]
uuid = { version = "1.8", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
rand = "0.8"
rand_distr = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
env_logger = "0.10"
rand_chacha = "0.3"
